fix layout bug

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -94,6 +94,7 @@ h3.topic {
 .site-header-logo {
   display: flex;
   min-height: 100px;
+  max-width: 250px;
   align-items: center;
 
   @include mq(md) {
